tests/semantic_errors/andrei16_6.tl
require"ifj21"

-- wrong arithm types
function main(str : string)
    local id : integer = 34 + str
end

main("aaa")
